X-editable changelog
=============================



Version 1.4.2 wip
----------------------------
[bug #99] select2 with Hierarchical Data (kev360)
[bug #81] wysihtml5: fix inserting image (vitalets)
[bug] remove $.browser from wysihtml5 input to support jQuery 1.9 (vitalets)
[bug #142] editable poshytip jquery 1.9+ compatibility (spiderpug)
[enh #126] Update bootstrap datepicker library and add minViewMode to options (kev360)
[enh #150] select2 with showbuttons = false (vitalets)
[bug #149] datepicker not shown when showbuttons = false (vitalets)
[bug #133] clear button incorect position due to parent line-height property (vitalets)
[bug #141] data-value ignored for empty elements (vitalets)
[bug #137] fix empty class for delegated element (vitalets)
[enh #121] add support of momentjs 2.0.0 in combodate (vitalets)


Version 1.4.1 Jan 18, 2013
----------------------------
[enh #62] new option `selector` to work with delegated targets (vitalets) 
[enh] new option `unsavedclass` to set css class when value was not sent to server (vitalets) 
[enh] new option `emptyclass` to set css class when element is empty (vitalets) 
[enh #59] select2 input (vitalets) 
[enh #17] typeahead input (vitalets) 
[enh] select: support of OPTGROUP via `children` key in source (vitalets) 
[enh] checklist: set checked via prop instead of attr (vitalets) 


Version 1.4.0 Jan 11, 2013
----------------------------
[enh] added new input type: combodate (vitalets) 
[bug #68] allow arrays for data attributes (adimitrov) 
[enh] setValue method updates input if form is open (vitalets) 
[enh] select: change source via option method, see #61 (vitalets) 
[bug] select: source loaded twice if sourceCache = false (vitalets) 
[enh] added `destroy` method, see #61 (vitalets) 
[enh] textarea: added `rows` property (vitalets) 
[enh #60] added wysihtml5 input (vitalets) 
[enh] added IOS-style clear button for text inputs (vitalets) 
[enh] date inputs changed in inline mode (vitalets) 